cabal-version: 3.4
name:          yare
version:       0.1.0.0
synopsis:      yare: cardano app
license:       MIT
author:        Unisay
maintainer:    Unisay@users.noreply.github.com
category:      Web
build-type:    Simple

common opts
  default-language:   Haskell2010
  default-extensions:
    AllowAmbiguousTypes
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    LiberalTypeSynonyms
    MultiParamTypeClasses
    NamedFieldPuns
    NoImplicitPrelude
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    PolyKinds
    QuasiQuotes
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UnicodeSyntax
    ViewPatterns

  ghc-options:
    -Weverything -Wno-unused-packages -Wno-unsafe -Wno-safe
    -Wno-unticked-promoted-constructors -Wno-missing-safe-haskell-mode
    -Wno-missing-import-lists -Wno-missing-export-lists
    -fprint-explicit-foralls -Wno-missing-kind-signatures
    -Werror=missing-fields -fprint-expanded-synonyms
    -Wno-all-missed-specialisations

  build-depends:
    , base    ^>=4.18
    , path    ^>=0.9.5
    , relude  ^>=1.2.2
    , tagged  ^>=0.8.8

library
  import:          opts
  hs-source-dirs:  lib
  build-depends:
    , aeson                          ^>=2.2.3
    , base16-bytestring              ^>=1.0.2
    , bytestring
    , cardano-addresses
    , cardano-api                    ^>=10.10
    , cardano-client
    , cardano-crypto
    , cardano-crypto-class
    , cardano-crypto-wrapper
    , cardano-ledger-allegra
    , cardano-ledger-alonzo
    , cardano-ledger-api
    , cardano-ledger-babbage
    , cardano-ledger-binary
    , cardano-ledger-byron
    , cardano-ledger-conway
    , cardano-ledger-core
    , cardano-ledger-mary
    , cardano-ledger-shelley
    , cardano-lmdb-simple            >=0.8      && <1
    , cardano-slotting
    , cardano-strict-containers
    , cborg                          ^>=0.2.10
    , containers
    , contra-tracer                  ^>=0.1.0.2
    , deepseq
    , dlist                          ^>=1.0
    , fmt                            ^>=0.6.3
    , generics-sop                   ^>=0.5.1.4
    , HList                          ^>=0.5.3
    , http-api-data
    , int-cast                       ^>=0.2
    , io-classes                     >=1.5      && <2
    , lens                           ^>=5.3.2
    , mmorph                         ^>=1.2
    , mtl                            ^>=2.3.1
    , network-mux                    >=0.6      && <1
    , nothunks                       ^>=0.2.1
    , oops                           ^>=0.2.0.1
    , ouroboros-consensus
    , ouroboros-consensus-cardano
    , ouroboros-consensus-diffusion
    , ouroboros-consensus-protocol
    , ouroboros-network
    , ouroboros-network-api
    , ouroboros-network-framework
    , ouroboros-network-protocols
    , path-io                        ^>=1.8.2
    , placeholders                   ^>=0.1
    , plutus-ledger-api
    , plutus-tx
    , pretty-simple                  ^>=4.1.2
    , serialise                      ^>=0.2
    , servant                        ^>=0.20.1
    , servant-server                 ^>=0.20
    , si-timers
    , stm                            ^>=2.5.1
    , strict                         ^>=0.5.1
    , strict-sop-core                ^>=0.1.1
    , string-interpolate             ^>=0.3.3
    , text                           ^>=2.0.2
    , text-ansi                      ^>=0.3.0.1
    , transformers                   ^>=0.6.1.0
    , unliftio
    , wai                            ^>=3.2.4
    , wai-cors                       ^>=0.2.7
    , wai-extra                      ^>=3.1.15
    , warp                           ^>=3.4.1
    , Win32-network                  ^>=0.2
    , yare:onchain

  other-modules:
    Codec.Serialise.Class.Orphans
    Control.DeepSeq.Orphans
    Fmt.Orphans
    GHC.Generics.Orphans
    NoThunks.Class.Orphans
    Web.HttpApiData.Orphans

  exposed-modules:
    Control.Tracer.Extended
    Data.Has
    Data.HList.Extended
    Data.IORef.Strict
    NoThunks.Class.Extended
    Yare.Address
    Yare.Address.Derivation
    Yare.App
    Yare.App.Scripts
    Yare.App.Services
    Yare.App.Services.DeployScript
    Yare.App.Services.Error
    Yare.App.Services.Minting
    Yare.App.State
    Yare.App.Types
    Yare.Chain.Block
    Yare.Chain.Block.Reference
    Yare.Chain.Era
    Yare.Chain.Follower
    Yare.Chain.Point
    Yare.Chain.Sync
    Yare.Chain.Tx
    Yare.Chain.Types
    Yare.Compat.Plutus
    Yare.Env
    Yare.Http.Address
    Yare.Http.Server
    Yare.Http.Server.Start
    Yare.Http.Types
    Yare.Mnemonic
    Yare.Node.Socket
    Yare.Node.Subscription
    Yare.Prelude
    Yare.Query
    Yare.Storage
    Yare.Submitter
    Yare.Tracers
    Yare.Util.State
    Yare.Util.Tx.Construction
    Yare.Utxo
    Yare.Utxo.Indexer
    Yare.Utxo.Internal

library onchain
  import:             opts
  hs-source-dirs:     onchain
  exposed-modules:
    Plutus.Prelude
    Yare.App.Scripts.MintingPolicy
    Yare.App.Scripts.Test

  build-depends:
    , cardano-api
    , plutus-core
    , plutus-ledger-api
    , plutus-tx
    , plutus-tx-plugin

  ghc-options:
    -fplugin PlutusTx.Plugin -fplugin-opt
    PlutusTx.Plugin:target-version=1.1.0 -fno-full-laziness
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fno-spec-constr -fno-specialise -fno-strictness
    -fno-unbox-small-strict-fields -fno-unbox-strict-fields
    -fno-full-laziness -fno-ignore-interface-pragmas
    -fno-omit-interface-pragmas -fno-spec-constr -fno-specialise
    -fno-strictness -fno-unbox-small-strict-fields
    -fno-unbox-strict-fields -Wno-redundant-bang-patterns

  default-extensions: Strict

executable yare-offchain
  import:         opts
  hs-source-dirs: exe/offchain
  ghc-options:    -threaded -rtsopts
  main-is:        Main.hs
  build-depends:
    , cardano-addresses
    , cardano-strict-containers
    , optparse-applicative       ^>=0.18.1
    , ouroboros-network-api
    , path-io                    ^>=1.8.2
    , with-utf8                  ^>=1.1
    , yare

executable yare-onchain
  import:         opts
  hs-source-dirs: exe/onchain
  ghc-options:    -threaded
  main-is:        Main.hs
  build-depends:
    , base16-bytestring
    , bytestring
    , cardano-addresses
    , optparse-applicative        ^>=0.18.1
    , path-io                     ^>=1.8.2
    , plutus-ledger-api
    , plutus-tx
    , prettyprinter-configurable
    , text
    , with-utf8                   ^>=1.1
    , yare

test-suite yare-test
  import:             opts
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Spec.hs
  build-tool-depends: sydtest-discover:sydtest-discover
  ghc-options:        -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , cardano-api
    , cardano-crypto-class
    , cardano-ledger-api
    , cardano-ledger-core:testlib
    , cardano-ledger-mary:testlib
    , cardano-ledger-shelley
    , cardano-slotting
    , cardano-slotting:testlib
    , containers
    , fmt
    , QuickCheck                   ^>=2.15
    , sydtest                      ^>=0.17
    , sydtest-discover             ^>=0.0.0.4
    , yare

  other-modules:
    Arbitrary
    UtxoSpec
